# starting-k8s-with-k3s-on-pi

./: .gitignore  README.md  setup-inlets.sh
containers/: service.yaml
containers/cpp/: CMakeLists.txt  Dockerfile  deployment.yaml
containers/cpp/src/: CMakeLists.txt  main.cpp
containers/go/: Dockerfile  deployment.yaml  main.go
containers/rust/: Cargo.toml  Dockerfile  build.sh  deployment.yaml
containers/rust/src/: main.rs
containers/static/: Dockerfile  index.html  manifests.yaml
slides/: Getting started with kubernetes using k3s.odp
